--- a/css/main.css
+++ b/css/main.css
@@ -302,6 +302,66 @@ footer .container {
   fill: var(--white);
 }
 
+/* Стилі для блоку футера "Підписка" */
+
+.subscription {
+  margin-left: 93px;
+}
+
+.subscription p {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--white);
+  margin-bottom: 20px;
+}
+
+.subscription-input {
+  width: 351px;
+  height: 50px;
+  padding: 15px 16px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  background-color: inherit;
+  color: var(--white);
+}
+
+.subscription-button {
+  width: 200px;
+  height: 50px;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  background-color: var(--accent);
+  cursor: pointer;
+  margin-left: 12px;
+
+  text-align: center;
+  color: var(--white);
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+
+  transition: background-color var(--animation-time) var(--animation-function);
+}
+
+.subscription-button:focus,
+.subscription-button:hover {
+  background-color: #188ce8;
+}
+
+.subscription-icon {
+  margin-left: 10px;
+}
+
 /* BackDrop */
 
 .service-backdrop {
@@ -321,18 +381,21 @@ footer .container {
   pointer-events: none;
 }
 
+/* Стилі модального вікна */
+
 .service-modal {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%) scale(1);
+
   width: 528px;
   height: 581px;
+  padding: 40px;
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: var(--white);
-  /* background-color: green; */
 
   transition: transform var(--animation-time) var(--animation-function);
 }
@@ -341,6 +404,8 @@ footer .container {
   transform: translateX(-50%) translateY(-50%) scale(0.5);
 }
 
+/* Стилі кнопки "Закрити" модального вікна */
+
 .servise-button {
   position: absolute;
   top: 8px;
@@ -348,26 +413,200 @@ footer .container {
 
   background-color: var(--white);
   fill: var(--black);
+  background-origin: border-box;
 
-  border: none;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0px;
   width: 30px;
   height: 30px;
   border-radius: 50%;
   cursor: pointer;
 
-  transition: fill var(--animation-time) var(--animation-function),
-    background-color var(--animation-time) var(--animation-function);
+  transition: fill var(--animation-time) var(--animation-function);
 }
 
 .servise-button-icon {
+  position: absolute;
+  top: -1px;
+  left: -1px;
   fill: inherit;
 }
 
 .servise-button:hover,
 .servise-button:focus {
-  fill: var(--white);
+  fill: var(--accent);
+}
+
+/* Стилі форми */
+
+.servise-form {
+  display: flex;
+  flex-direction: column;
+}
+
+.servise-form p {
+  color: var(--black-text);
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+  margin-bottom: 12px;
+}
+
+.form-fild {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.form-label {
+  font-size: 12px;
+  line-height: 1.166;
+  letter-spacing: 0.01em;
+  color: var(--grey-text);
+
+  display: inline-block;
+  margin-bottom: 4px;
+}
+
+.form-input {
+  position: relative;
+}
+
+.form-input input {
+  width: 100%;
+  height: 40px;
+  padding: 0;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  transition: border-color var(--animation-time) var(--animation-function);
+}
+
+.form-input input:focus,
+.form-input input:hover {
+  border-color: var(--accent);
+  outline: none;
+}
+
+.input-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+
+  transition: fill var(--animation-time) var(--animation-function);
+}
+
+.form-input input:focus + .input-icon,
+.form-input input:hover + .input-icon {
+  fill: var(--accent);
+}
+
+.form-textarea {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.textarea-fild {
+  padding: 12px 16px;
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  resize: none;
+  transition: border-color var(--animation-time) var(--animation-function);
+}
+
+.textarea-fild:focus,
+.textarea-fild:hover {
+  border-color: var(--accent);
+  outline: none;
+}
+
+.textarea-fild::placeholder {
+  font-size: 12px;
+  line-height: 1.166;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form-submit {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.submit-label {
+  display: flex;
+  align-items: center;
+  position: relative;
+  margin-bottom: 30px;
+}
+
+.submit-square {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  margin-right: 7px;
+  border: 2px solid var(--black-text);
+  border-radius: 2px;
+  opacity: 1;
+  transition: opacity var(--animation-time) var(--animation-function);
+}
+
+.submit-checkbox:checked ~ .submit-square {
+  opacity: 0;
+}
+
+.submit-checkbox:checked + .submit-icon {
+  opacity: 1;
+}
+
+.submit-icon {
+  position: absolute;
+  opacity: 0;
+  transition: opacity var(--animation-time) var(--animation-function);
+}
+
+.submit-contract {
+  font-size: 14px;
+  line-height: 1.714;
+  color: var(--grey-text);
+}
+
+.submit-contract a {
+  color: var(--accent);
+}
+
+.submit-button {
+  width: 200px;
+  height: 50px;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
   background-color: var(--accent);
+  cursor: pointer;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+  text-align: center;
+  color: var(--white);
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+
+  transition: background-color var(--animation-time) var(--animation-function);
+}
+
+.submit-button:focus,
+.submit-button:hover {
+  background-color: #188ce8;
 }
 
 /* Додаткові стилі */
